Miscellaneous code cleanup.

--- a/src/ductworkTests/ductworkTests/ductworkTests.csproj
+++ b/src/ductworkTests/ductworkTests/ductworkTests.csproj
@@ -7,7 +7,7 @@
 
         <Nullable>enable</Nullable>
 
-        <LangVersion>default</LangVersion>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
