Remove unneeded base executor class and replace it with an interface. Simplify executor constructor.

--- a/src/ductworkTests/ductworkTests/ductworkTests.csproj
+++ b/src/ductworkTests/ductworkTests/ductworkTests.csproj
@@ -39,4 +39,8 @@
       <None Remove="Resources\TestGraphMissingComponentArgs.xml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Executors" />
+    </ItemGroup>
+
 </Project>
