--- a/src/ductwork/ductwork.csproj
+++ b/src/ductwork/ductwork.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <LangVersion>10</LangVersion>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Crc32.NET" Version="1.2.0" />
       <PackageReference Include="Glob" Version="1.2.0-alpha0037" />
-      <PackageReference Include="NLog" Version="5.0.0-preview.3" />
+      <PackageReference Include="NLog" Version="5.0.5" />
     </ItemGroup>
 
 </Project>
