--- a/src/ductworkScriban/ductworkScriban.csproj
+++ b/src/ductworkScriban/ductworkScriban.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Scriban" Version="5.0.0" />
+      <PackageReference Include="Scriban" Version="5.5.0" />
     </ItemGroup>
 
     <ItemGroup>
