Add back in not-so-vestigial test graph xml files. Revert commit 7990b556e5cf4e3cce17ee1c296ffd47672fdec1.

--- a/src/ductworkTests/ductworkTests/ductworkTests.csproj
+++ b/src/ductworkTests/ductworkTests/ductworkTests.csproj
@@ -29,7 +29,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Resources\TestGraphAdder.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
       <None Remove="Resources\TestGraphRepeater.xml" />
+      <Content Include="Resources\TestGraphReceivers.xml">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
