Move ductworkTests project out of its additional subdirectory.

--- a/src/ductworkTests/ductworkTests.csproj
+++ b/src/ductworkTests/ductworkTests.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\ductwork\ductwork.csproj" />
+      <ProjectReference Include="..\ductwork\ductwork.csproj" />
     </ItemGroup>
 
     <ItemGroup>
